--- a/index.css
+++ b/index.css
@@ -1,3 +1,21 @@
 body {
    background-color: rgb(255, 255, 255);
 }
+
+.collection .anime-char.show{
+    animation: fadeIn .5s;
+}
+
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+
+.hide {
+    display:none;
+}
