Set up function for eventlistener, but need CSS.

--- a/index.css
+++ b/index.css
@@ -1,21 +1,5 @@
 body {
-   background-color: rgb(255, 255, 255);
-}
-
-.collection .anime-char.show{
-    animation: fadeIn .5s;
-}
-
-@keyframes fadeIn{
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
+    margin: 0;
 }
 
 
-.hide {
-    display:none;
-}
