Gives fadeIn effects and button works partially

--- a/index.css
+++ b/index.css
@@ -3,3 +3,22 @@ body {
 }
 
 
+
+.collection .anime-char.show{
+    animation: fadeIn .5s;
+}
+
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+
+.hide {
+    display:none;
+}
+
